--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <body>
         <header>
             <img class="logo" src="./assets/codoacodo.png" alt="Logo codo a codo">
+            <p>Conf Bs As</p>
+            <a href="#">La conferencia</a>
+            <a href="#">Los oradores</a>
+            <a href="#">El lugar y la fecha</a>
+            <a href="#">Conviértete en orador</a>
+            <a href="#">Comprar tickets</a>
         </header>
         <main>
             
