--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         <main>
             
             <section class="banner">
+                <h1>Conf Bs As</h1>
+                <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad
+                    el conocimiento y la experiencia de los expertos que están creando el futuro de internet. Ven
+                    a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel
+                    que tenemos para tí ¡Te esperamos!
+                </p>
+                <button>Quiero ser orador</button>
+                <button>Comprar tickets</button>
                 
             </section>
 
