Avances en oradores

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="row" id="oradores">
             <p>Conoce a los</p>
             <h2>ORADORES</h2>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-4 col-sm-4 steve">
                 <div class="card" style="width: 15rem;">
                     <img class="card-img-top" src="./assets/steve.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="card" style="width: 15rem;">
                     <img class="card-img-top" src="./assets/bill.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-4 col-sm-12 ada">
 
                 <div class="card" style="width: 15rem;">
                     <img class="card-img-top" src="./assets/ada.jpeg" alt="Card image cap">
