--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <img class="card-img-top" src="./assets/steve.jpg" alt="Card image cap">
                     <div class="card-body">
                         <span class="tema">
-                            <h6>Javascript</h6>
-                            <h6>React</h6>
+                            <div id="js"><p>Javascript</p></div>
+                            <div id="react"><p>React</p></div>
                         </span>
                         <h5 class="card-title">Steve Jobs</h5>
                         <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat assumenda
@@ -64,8 +64,8 @@
                     <img class="card-img-top" src="./assets/bill.jpg" alt="Card image cap">
                     <div class="card-body">
                         <span class="tema">
-                            <h6>Javascript</h6>
-                            <h6>React</h6>
+                            <div id="js"><p>Javascript</p></div>
+                            <div id="react"><p>React</p></div>
                         </span>
                         <h5 class="card-title">Bill Gates</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta esse
@@ -81,8 +81,8 @@
                     <img class="card-img-top" src="./assets/ada.jpeg" alt="Card image cap">
                     <div class="card-body">
                         <span class="tema">
-                            <h6>Negocios</h6>
-                            <h6>Startups</h6>
+                            <div id="negocios"><p>Negocios</p></div>
+                            <div id="startups"><p>Startups</p></div>
                         </span>
                         <h5 class="card-title">Ada Lovelace</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum
@@ -100,7 +100,13 @@
         <section class="form"></section>
     </main>
     <footer>
-        <p></p>
+        <a>Preguntas frecuentes</a>
+        <a>Contáctanos</a>
+        <a>Prensa</a>
+        <a>Conferencias</a>
+        <a>Términos y condiciones</a>
+        <a>Privacidad</a>
+        <a>Estudiantes</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
