--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+ <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-</head>
+ </head>
 
-<body>
+ <body>
     <header>
         <img class="logo" src="./assets/codoacodo.png" alt="Logo codo a codo">
         <p>Conf Bs As</p>
@@ -40,7 +40,7 @@
             </div>
         </section>
 
-        <section class="row" id="oradores">
+        <section class="row mb-4" id="oradores">
             <p>Conoce a los</p>
             <h2>ORADORES</h2>
             <div class="col-lg-4 col-md-4 col-sm-4 steve">
@@ -48,8 +48,12 @@
                     <img class="card-img-top" src="./assets/steve.jpg" alt="Card image cap">
                     <div class="card-body">
                         <span class="tema">
-                            <div id="js"><p>Javascript</p></div>
-                            <div id="react"><p>React</p></div>
+                            <div id="js">
+                                <p>Javascript</p>
+                            </div>
+                            <div id="react">
+                                <p>React</p>
+                            </div>
                         </span>
                         <h5 class="card-title">Steve Jobs</h5>
                         <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat assumenda
@@ -64,8 +68,12 @@
                     <img class="card-img-top" src="./assets/bill.jpg" alt="Card image cap">
                     <div class="card-body">
                         <span class="tema">
-                            <div id="js"><p>Javascript</p></div>
-                            <div id="react"><p>React</p></div>
+                            <div id="js">
+                                <p>Javascript</p>
+                            </div>
+                            <div id="react">
+                                <p>React</p>
+                            </div>
                         </span>
                         <h5 class="card-title">Bill Gates</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta esse
@@ -81,8 +89,12 @@
                     <img class="card-img-top" src="./assets/ada.jpeg" alt="Card image cap">
                     <div class="card-body">
                         <span class="tema">
-                            <div id="negocios"><p>Negocios</p></div>
-                            <div id="startups"><p>Startups</p></div>
+                            <div id="negocios">
+                                <p>Negocios</p>
+                            </div>
+                            <div id="startups">
+                                <p>Startups</p>
+                            </div>
                         </span>
                         <h5 class="card-title">Ada Lovelace</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum
@@ -94,12 +106,53 @@
             </div>
         </section>
 
-        <section class="carrousel">
+        <section id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div id="slides">
+                        <img src="./assets/ba3.jpg" class="d-block w-50" alt="BsAS">
+                        <div class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
+                            repellat suscipit molestiae temporibus autem iusto, in odit nihil maxime ipsam error iure
+                            dignissimos aliquam quisquam. Corrupti autem qui temporibus commodi.</div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div id="slides">
+                        <img src="./assets/honolulu.jpg" class="d-block w-50" alt="Honolulu">
+                        <div class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
+                            repellat suscipit molestiae temporibus autem iusto, in odit nihil maxime ipsam error iure
+                            dignissimos aliquam quisquam. Corrupti autem qui temporibus commodi.</div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div id="slides">
+                        <img src="./assets/ba2.jpg" class="d-block w-50" alt="España">
+                        <div class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
+                            repellat suscipit molestiae temporibus autem iusto, in odit nihil maxime ipsam error iure
+                            dignissimos aliquam quisquam. Corrupti autem qui temporibus commodi.</div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>         
+        </section>
+
+        <section class="form">
 
         </section>
-        <section class="form"></section>
     </main>
-    <footer>
+
+    <footer class="mt-4">
         <a>Preguntas frecuentes</a>
         <a>Contáctanos</a>
         <a>Prensa</a>
@@ -111,6 +164,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-</body>
+ </body>
 
 </html>
