--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel
                     que tenemos para tí ¡Te esperamos!
                 </p>
-                <span class="buttons">
-                    <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+                <span class="banner-buttons">
+                    <button type="button" class="btn btn-outline-light mb-1">Quiero ser orador</button>
                     <button type="button" class="btn btn-success">Comprar tickets</button>
                 </span>
             </div>
@@ -180,6 +180,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+        <script src="./scripts.js"></script>
  </body>
 
 </html>
