Correccion responsive tickets

--- a/tickets.html
+++ b/tickets.html
@@ -45,7 +45,7 @@
             </div>
         </section>
         <section class="row" id="formulario">
-            <p id="conviertete" class="text-center">Venta</p>
+            <p id="venta" class="text-center">Venta</p>
             <h2>VALOR DE TICKET $200</h2>
             <form class="mb-3  col-10">
                 <span>
