Correcciones css index y tickets

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#">Los oradores</a>
         <a href="#">El lugar y la fecha</a>
         <a href="#">Conviértete en orador</a>
-        <a href="#" id="tickets">Comprar tickets</a>
+        <a href="./tickets.html" id="tickets">Comprar tickets</a>
     </header>
     <main>
 
@@ -35,13 +35,13 @@
                 </p>
                 <span class="banner-buttons">
                     <button type="button" class="btn btn-outline-light mb-1">Quiero ser orador</button>
-                    <button type="button" class="btn btn-success">Comprar tickets</button>
+                    <a href="./tickets.html"><button type="button" class="btn btn-success mb-1"> Comprar tickets</button></a>
                 </span>
             </div>
         </section>
 
         <section class="row mb-4" id="oradores">
-            <p id="conoce" class="text-center">Conoce a los</p>
+            <p id="conoce" class="text-center mt-3">Conoce a los</p>
             <h2>ORADORES</h2>
             <div class="col-lg-4 col-md-4 col-sm-4 steve">
                 <div class="card" style="width: 15rem;">
