Lógica JS: Calculo totalPago

--- a/tickets.html
+++ b/tickets.html
@@ -62,7 +62,7 @@
             </span>
             <span class="categoria">
                 <label for="categoria" class="form-label mt-2">Categoria:</label>
-                <select id="categoria" name="categoria" class="form-control">
+                <select id="categoria" name="categoria" class="form-control" onchange="mostrarCategoria()">
                     <option value="">Categoria</option>
                     <option value="1">Estudiante</option>
                     <option value="2">Trainee</option>
