Avance funcion tipoDescuento

--- a/tickets.html
+++ b/tickets.html
@@ -58,11 +58,11 @@
             <div class="form-group" id="cantidadCategoria">
                 <span class="cantidad">
                 <label for="cantidad" class="form-label mt-2">Cantidad:</label>
-                <input type="number" class="form-control" id="cantidad" placeholder="Cantidad">
+                <input type="number" class="form-control" id="cantidad" placeholder="Cantidad" >
             </span>
             <span class="categoria">
                 <label for="categoria" class="form-label mt-2">Categoria:</label>
-                <select id="categoria" name="categoria" class="form-control" onchange="mostrarCategoria()">
+                <select id="categoria" name="categoria" class="form-control" onchange="tipoDescuento()">
                     <option value="">Categoria</option>
                     <option value="1">Estudiante</option>
                     <option value="2">Trainee</option>
