--- a/tickets.html
+++ b/tickets.html
@@ -62,7 +62,7 @@
             </span>
             <span class="categoria">
                 <label for="categoria" class="form-label mt-2">Categoria:</label>
-                <select id="categoria" name="categoria" class="form-control" onchange="tipoDescuento()">
+                <select id="categoria" name="categoria" class="form-control">
                     <option value="">Categoria</option>
                     <option value="1">Estudiante</option>
                     <option value="2">Trainee</option>
@@ -71,11 +71,11 @@
             </span>
         </div>
        <div class="form-group">
-                <input type="text" class="form-control mt-3 mb-3" id="total" placeholder="Total a pagar: $">
+                <div id="total"></div>
             </div>
                 <span class="botones">
                 <button class="btn-success">Borrar</button>
-                <button class="btn-success">Resumen</button>
+                <button  id="resumen">Resumen</button>
             </span>
               </form>
         
