--- a/tickets.html
+++ b/tickets.html
@@ -49,20 +49,20 @@
             <h2>VALOR DE TICKET $200</h2>
             <form class="mb-3  col-10" id="formTickets">          
                 <span class="form-group" id="nombreApellido">
-                <input type="text" class="form-control" id="nombre" placeholder="Nombre">
-                <input type="text" class="form-control" id="apellido" placeholder="Apellido" >
+                <input type="text" class="form-control" id="nombre" placeholder="Nombre"  required>
+                <input type="text" class="form-control" id="apellido" placeholder="Apellido"  required>
             </span>
             <div class="form-group">
-                <input type="email" class="form-control" id="email" placeholder="Correo">
+                <input type="email" class="form-control" id="email" placeholder="Correo" required>
             </div>
             <div class="form-group" id="cantidadCategoria">
                 <span class="cantidad">
                 <label for="cantidad" class="form-label mt-2">Cantidad:</label>
-                <input type="number" class="form-control" id="cantidad" placeholder="Cantidad" >
+                <input type="number" class="form-control" id="cantidad" placeholder="Cantidad"  required>
             </span>
             <span class="categoria">
                 <label for="categoria" class="form-label mt-2">Categoria:</label>
-                <select id="categoria" name="categoria" class="form-control">
+                <select id="categoria" name="categoria" class="form-control" required>
                     <option value="">Categoria</option>
                     <option value="1">Estudiante</option>
                     <option value="2">Trainee</option>
@@ -71,11 +71,11 @@
             </span>
         </div>
        <div class="form-group">
-                <div id="total"></div>
+                <div id="total" class="mb-3"><p id="totalP">Total a pagar: $</p></div>
             </div>
                 <span class="botones">
                 <button class="btn-success">Borrar</button>
-                <button  id="resumen">Resumen</button>
+                <button type="button" id="resumen">Resumen</button>
             </span>
               </form>
         
