Fin validacion de formulario tickets + algunas correcciones

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <section class="row mb-4" id="oradores">
             <p id="conoce" class="text-center mt-3">Conoce a los</p>
-            <h2>ORADORES</h2>
+            <h2 class="text-center">ORADORES</h2>
             <div class="col-lg-4 col-md-4 col-sm-4 steve">
                 <div class="card" style="width: 15rem;">
                     <img class="card-img-top" src="./assets/steve.jpg" alt="Card image cap">
@@ -161,7 +161,7 @@
                 <label for="tema-charla" class="form-label" ></label>
                 <textarea class="form-control" id="tema-charla" rows="3" placeholder="¿Sobre qué quieres hablar?"></textarea>
                 <p id="titulo">Recuerda incluir un título para tu charla</p>
-                <input type="submit" value="Submit" id="submit">
+                <input type="submit" value="Enviar" id="submit">
               </form>
         
 
